removed vh height and used padding to get spacing correct on front page

--- a/powo-portal/src/main/frontend/src/sass/pages/_home.scss
+++ b/powo-portal/src/main/frontend/src/sass/pages/_home.scss
@@ -11,7 +11,6 @@
     background-size: cover;
     background-position-x: 25%;
     background-position-y: 25%;
-    min-height: 80vh;
     background-repeat: no-repeat;
     @media (max-width: $screen-sm-min) {
       min-height: 120vh;
@@ -77,7 +76,6 @@
   .front-page-container {
     display: flex;
     flex-direction: column;
-    height: 80vh;
     padding: 0 16px;
     @media (min-width: $screen-sm-min) {
       padding: 0 100px;
@@ -86,6 +84,10 @@
       flex-direction: column;
       max-width: 865px;
       margin: auto;
+      padding: 25% 0 12%;
+      @media (min-width: $screen-sm-min) {
+        padding: 12% 0 13%;
+      }
       p {
         padding-bottom: 35px;
         margin: 0
